deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gdwrsite
spec:
  selector:
    app: gdwrsite
  ports:
    - port: 80
