deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gdwrsite
spec:
  rules:
  - host: gdwr.me
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: gdwrsite
              port:
                number: 80
